Add black config to pyproject.toml for consistent line-length=120

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,6 @@ Issues = "https://github.com/yourusername/kodi-addon-builder/issues"
 
 [project.scripts]
 kodi-addon-builder = "kodi_addon_builder.cli:main"
+
+[tool.black]
+line-length = 120
