--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .[dev]
-        pip install pyright black flake8 pytest-cov
+        pip install pyright black flake8 flake8-pyproject pytest-cov
 
     - name: Run tests with coverage
       run: |
