--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dev = [
     "pytest-cov>=4.0.0",
     "black>=22.0.0",
     "flake8>=4.0.0",
+    "flake8-pyproject>=1.0.0",
     "pyright>=1.1.0",
 ]
 
@@ -45,3 +46,7 @@ kodi-addon-builder = "kodi_addon_builder.cli:main"
 
 [tool.black]
 line-length = 120
+
+[tool.flake8]
+max-line-length = 120
+extend-ignore = ["E203"]
