--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ master, main ]
 
+permissions:
+  contents: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -31,13 +34,31 @@ jobs:
 
     - name: Run tests with coverage
       run: |
-        python -m pytest --cov=src/kodi_addon_builder --cov-report=xml
+        python -m pytest --cov=src/kodi_addon_builder --cov-report=xml --cov-report=html
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+    - name: Upload coverage reports
+      uses: actions/upload-artifact@v4
       with:
-        file: ./coverage.xml
-        fail_ci_if_error: false
+        name: coverage-report-${{ matrix.python-version }}
+        path: |
+          coverage.xml
+          htmlcov/
+        retention-days: 30
+
+    - name: Generate coverage badge
+      if: github.ref == 'refs/heads/master' && matrix.python-version == '3.12'
+      run: |
+        COVERAGE=$(python -m pytest --cov=src/kodi_addon_builder --cov-report=term-missing | grep TOTAL | awk '{print $4}' | tr -d '%')
+        anybadge --value=$COVERAGE --label=Coverage --file=coverage-badge.svg --color=green
+
+    - name: Commit coverage badge
+      if: github.ref == 'refs/heads/master' && matrix.python-version == '3.12'
+      uses: EndBug/add-and-commit@v9
+      with:
+        add: coverage-badge.svg
+        message: 'Update coverage badge'
+        author_name: 'GitHub Actions'
+        author_email: 'actions@github.com'
 
     - name: Run type checking (Pyright)
       run: |
