--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,20 +45,18 @@ jobs:
           htmlcov/
         retention-days: 30
 
-    - name: Generate coverage badge
+    - name: Commit coverage badge to badges branch
       if: github.ref == 'refs/heads/master' && matrix.python-version == '3.12'
       run: |
-        COVERAGE=$(python -m pytest --cov=src/kodi_addon_builder --cov-report=term-missing | grep TOTAL | awk '{print $4}' | tr -d '%')
-        anybadge --value=$COVERAGE --label=Coverage --file=coverage-badge.svg --color=green
-
-    - name: Commit coverage badge
-      if: github.ref == 'refs/heads/master' && matrix.python-version == '3.12'
-      uses: EndBug/add-and-commit@v9
-      with:
-        add: coverage-badge.svg
-        message: 'Update coverage badge'
-        author_name: 'GitHub Actions'
-        author_email: 'actions@github.com'
+        git config --global user.name 'GitHub Actions'
+        git config --global user.email 'actions@github.com'
+        git fetch origin
+        git checkout -B badges origin/badges
+        COVERAGE=$(python -c "import xml.etree.ElementTree as ET; print(int(float(ET.parse('coverage.xml').getroot().attrib['line-rate']) * 100))")
+        anybadge --value=$COVERAGE --label=Coverage --file=coverage-badge.svg --color=green --overwrite
+        git add coverage-badge.svg
+        git commit -m "Update coverage badge" || echo 'No changes to commit'
+        git push origin badges
 
     - name: Run type checking (Pyright)
       run: |
