Add comprehensive tests for bump_commit functionality and improve coverage to 90%
- Add tests for bump_commit, is_tree_clean, and update_changelog functions
- Add mock_repo fixture to conftest.py for git operation testing
- Update Makefile to include --cov-report=term-missing for detailed coverage output
- Improve test coverage from ~80% to 90% with 114 passing tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,7 @@ jobs:
         git fetch origin
         git checkout -B badges origin/badges
         COVERAGE=$(python -c "import xml.etree.ElementTree as ET; print(int(float(ET.parse('coverage.xml').getroot().attrib['line-rate']) * 100))")
+        echo "Coverage: $COVERAGE%"
         anybadge --value=$COVERAGE --label=Coverage --file=coverage-badge.svg --color=green --overwrite
         git add coverage-badge.svg
         git commit -m "Update coverage badge" || echo 'No changes to commit'
