--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,9 +64,9 @@ jobs:
         git config --global user.email 'actions@github.com'
         git fetch origin
         git checkout -B badges origin/badges
-        COVERAGE=$(python -c "import xml.etree.ElementTree as ET; print(int(float(ET.parse('coverage.xml').getroot().attrib['line-rate']) * 100))")
-        echo "Coverage: $COVERAGE%"
-        anybadge --value=$COVERAGE --label=Coverage --file=coverage-badge.svg --color=green --overwrite
+        COVERAGE=$(python -c "import xml.etree.ElementTree as ET; print(f\"{float(ET.parse('coverage.xml').getroot().attrib['line-rate']) * 100:.1f}%\")")
+        echo "Coverage: $COVERAGE"
+        anybadge --value="$COVERAGE" --label=Coverage --file=coverage-badge.svg --color=green --overwrite
         git add coverage-badge.svg
         git commit -m "Update coverage badge" || echo 'No changes to commit'
         git push origin badges
