--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "kodi-addon-builder"
-version = "0.3.2"
+version = "0.3.4"
 description = "A CLI tool to automate version bumping, committing, tagging, pushing, releasing, and local zip artifact generation for Kodi addons."
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -35,6 +35,7 @@ dev = [
     "flake8-pyproject>=1.0.0",
     "pyright>=1.1.0",
     "anybadge>=1.0.0",
+    "pre-commit>=3.0.0",
 ]
 
 [project.urls]
