--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e .[dev]
-        pip install pyright black flake8 flake8-pyproject pytest-cov
+        pip install uv
+        uv sync --system --group dev --group ci
 
     - name: Run type checking (Pyright)
       run: |
