Fix CI workflow to use --no-emit-project flag in uv export
- Add --no-emit-project to prevent including project in requirements
- This fixes hash errors when pip tries to install editable requirements
- Add requirements-dev-ci.txt to .gitignore as it's generated

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         # Install the package itself
         pip install -e .
         # Export and install dev/ci dependencies
-        uv export --group dev --group ci --output-file requirements-dev-ci.txt
+        uv export --group dev --group ci --no-emit-project --output-file requirements-dev-ci.txt
         pip install -r requirements-dev-ci.txt
 
     - name: Run type checking (Pyright)
