--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "click>=8.0.0",
     "gitpython>=3.1.0",
     "semver>=3.0.0",
+    "tomli_w>=1.0.0",
 ]
 
 [dependency-groups]
