--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,18 +36,16 @@ jobs:
         # Export and install dev/ci dependencies
         uv export --group dev --group ci --no-emit-project --output-file requirements-dev-ci.txt
         pip install -r requirements-dev-ci.txt
+        # Install pre-commit
+        pip install pre-commit
 
     - name: Run type checking (Pyright)
       run: |
         pyright src/
 
-    - name: Check formatting (Black)
+    - name: Run linting (Pre-commit)
       run: |
-        black --check --diff src/ tests/
-
-    - name: Lint (Flake8)
-      run: |
-        flake8 src/ tests/
+        pre-commit run --all-files
 
     - name: Run tests with coverage
       run: |
