--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
       - id: black
         language_version: python3
         args: [--line-length=120]
+        exclude: ^\.venv/
 
   - repo: https://github.com/pycqa/flake8
     rev: 7.0.0
@@ -12,3 +13,4 @@ repos:
       - id: flake8
         args: [--max-line-length=120, --extend-ignore=E203]
         language_version: python3
+        exclude: ^\.venv/
