--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "kodi-addon-builder"
-version = "0.4.1"
+version = "0.4.2"
 description = "A CLI tool to automate version bumping, committing, tagging, pushing, releasing, and local zip artifact generation for Kodi addons."
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -25,6 +25,7 @@ dependencies = [
     "gitpython>=3.1.0",
     "semver>=3.0.0",
     "tomli_w>=1.0.0",
+    "tomli>=1.2.0; python_version<'3.11'",
 ]
 
 [dependency-groups]
