--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,10 @@
 repos:
   - repo: https://github.com/psf/black
-    rev: 23.12.1  # Use the latest stable version
+    rev: 26.1.0  # Match local Black version
     hooks:
       - id: black
         language_version: python3
-        args: [--line-length=120]
+        args: [--config, pyproject.toml]
         exclude: ^\.venv/
 
   - repo: https://github.com/pycqa/flake8
