fix: Black version compatibility for CI
- Downgrade pre-commit Black to 24.10.0 (supports Python 3.9+)
- Update pyproject.toml Black requirement to >=24.10.0
- Accept minor formatting differences between local (26.1.0) and CI (24.10.0)
- Ensures CI compatibility while maintaining reasonable local development

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/psf/black
-    rev: 26.1.0  # Match local Black version
+    rev: 24.10.0  # Compatible with Python 3.9+ for CI
     hooks:
       - id: black
         language_version: python3
