--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,15 +51,33 @@ jobs:
       run: |
         python -m pytest --cov=src/kodi_addon_builder --cov-report=xml --cov-report=html
 
+    - name: Upload coverage artifacts
+      if: ${{ env.ACTIONS_RUNTIME_TOKEN != '' }}
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-${{ matrix.python-version }}
+        path: |
+          coverage.xml
+          htmlcov/
+
+  upload-artifacts:
+    needs: test
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
+    steps:
+    - name: Download coverage artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: coverage-${{ matrix.python-version }}
+        path: coverage-reports/
     - name: Upload coverage reports
       uses: actions/upload-artifact@v4
       with:
         name: coverage-report-${{ matrix.python-version }}
-        path: |
-          coverage.xml
-          htmlcov/
+        path: coverage-reports/
         retention-days: 30
-
     - name: Commit coverage badge to badges branch
       if: github.ref == 'refs/heads/master' && matrix.python-version == '3.12'
       run: |
@@ -67,7 +85,7 @@ jobs:
         git config --global user.email 'actions@github.com'
         git fetch origin
         git checkout -B badges origin/badges
-        COVERAGE=$(python -c "import xml.etree.ElementTree as ET; print(f\"{float(ET.parse('coverage.xml').getroot().attrib['line-rate']) * 100:.1f}%\")")
+        COVERAGE=$(python -c "import xml.etree.ElementTree as ET; print(f\"{float(ET.parse('coverage-reports/coverage.xml').getroot().attrib['line-rate']) * 100:.1f}%\")")
         echo "Coverage: $COVERAGE"
         anybadge --value="$COVERAGE" --label=Coverage --file=coverage-badge.svg --color=green --overwrite
         git add coverage-badge.svg
