--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     branches: [ master, main ]
   pull_request:
     branches: [ master, main ]
+  release:
+    types: [published]
 
 permissions:
   contents: write
@@ -111,3 +113,39 @@ jobs:
         git add coverage-badge.svg
         git commit -m "Update coverage badge" || echo 'No changes to commit'
         git push origin badges
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'
+    - name: Install dependencies
+      run: uv sync --group dev
+    - name: Build package
+      run: make build
+    - name: Check build
+      run: make build-check
+
+  build-release:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'release'
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'
+    - name: Install build
+      run: pip install build
+    - name: Build distributions
+      run: python -m build
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: dist
+        path: dist/
