--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,6 +123,8 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.12'
+    - name: Install uv
+      run: pip install uv
     - name: Install dependencies
       run: uv sync --group dev
     - name: Build package
